# ABERP

./: .gitignore  CLAUDE.md  Cargo.toml  FOUNDATION.md  LICENSE  README.md  audit.toml  deny.toml  rust-toolchain.toml
adr/: 0001-backend-language-rust.md  0002-tenant-isolation-db-per-tenant.md  0003-storage-abstraction-duckdb-first.md  0004-frontend-tauri-svelte.md  0005-id-scheme-ulid.md  0006-module-boundaries.md  0007-security-baseline.md  0008-audit-ledger.md  0009-nav-invoice-issuing.md  0010-invoice-ingestion.md  0011-inventory-model.md  0012-qr-labels-no-touch.md  0013-robotics-handoff.md  0014-cad-cam-artifacts.md  0015-order-logistics-state.md  0016-cloud-sync.md  0017-design-language.md  0018-storage-evolution-search-first.md  0019-storage-strategy-no-fks.md  0020-nav-transport-credential-correction.md  (+44 more)
apps/aberp/: Cargo.toml
apps/aberp/src/: ap_sync.rs  audit_dap_boot.rs  audit_payloads.rs  audit_summary.rs  avl_vendors.rs  binary_hash.rs  branding_config.rs  build_profile.rs  cad_blob.rs  catalogue_push.rs  cli.rs  db_path_guard.rs  db_writer_lock.rs  drain_pending_retries.rs  drain_submission_queue.rs  duckdb_helpers.rs  email_invoice.rs  email_outbox_poll_daemon.rs  email_relay.rs  email_relay_credentials.rs  email_relay_daemon.rs  email_relay_queue.rs  export_invoice_bundle.rs  first_launch.rs  incoming_invoices.rs  invoice_currency_metadata.rs  invoice_draft.rs  issue_invoice.rs  issue_modification.rs  issue_preflight.rs  issue_storno.rs  lib.rs  main.rs  mark_abandoned.rs  mark_invoice_paid.rs  material_inventory.rs  mes_adapters_config.rs  mes_boot.rs  mes_manager.rs  mnb_rates_provider.rs  (+49 more)
apps/aberp/tests/: adr0099_addendum2_equality_pin.rs  audit_mirror_wal_fold_tear.rs  avl_vendors_route.rs  boot_order_switch_hint_before_flock_and_handle.rs  chain_currency_match.rs  create_ncr_reentrancy_proof.rs  db_writer_lock_e2e.rs  email_outbox_poll_full_cycle.rs  email_outbox_poll_s311_stale_recovery.rs  email_recipient_override.rs  export_invoice_bundle_smoke.rs  h3_handle_coherence_model.rs  h4_pricing_config_coherence.rs  issue_invoice_eur_offline.rs  issue_modification_xml_round_trip.rs  issue_storno_xml_round_trip.rs  keychain_seam_gate.rs  nav_credentials_blob.rs  nav_xml_eur_body.rs  nav_xml_notes_never_leak.rs  nav_xml_payment_method.rs  nav_xml_summary_multibucket.rs  nav_xml_unit_of_measure.rs  nav_xml_vat_rate_kind.rs  nav_xsd_validator_annulment_round_trip.rs  nav_xsd_validator_round_trip.rs  ncr_capa_gate.rs  numbering_override_e2e.rs  observe_receiver_confirmation_live.rs  poll_ack_live.rs  poll_annulment_ack_live.rs  portable_demo_boot_e2e.rs  pr_84_invoice_dates.rs  print_invoice_render.rs  purchase_order_e2e.rs  qc_inspection_gate.rs  quoting_machines_route.rs  reports_financial.rs  request_technical_annulment_xml_round_trip.rs  retry_paths_read_on_disk_xml.rs  (+36 more)
apps/aberp/tests/fixtures/: seller_minimal.toml
crates/aberp-cad-extract-wrapper/: Cargo.toml
crates/aberp-cad-extract-wrapper/src/: lib.rs
crates/aberp-cad-extract-wrapper/tests/: error_paths.rs  extract_smoke.rs  feature_graph_roundtrip.rs  schema_version.rs
crates/aberp-cad-extract-wrapper/tests/common/: mod.rs
crates/aberp-compliance/: Cargo.toml
crates/aberp-compliance/src/: lib.rs  prelude.rs
crates/aberp-compliance/src/avl/: mod.rs  tests.rs
crates/aberp-compliance/src/cui/: mod.rs  tests.rs
crates/aberp-compliance/src/export_control/: mock.rs  mod.rs
crates/aberp-compliance/src/incident/: mod.rs  tests.rs
crates/aberp-compliance/src/lot_heat/: mod.rs  tests.rs
crates/aberp-compliance/src/nist_800_171/: mod.rs
crates/aberp-compliance/src/uid/: mod.rs  tests.rs
crates/aberp-db/: Cargo.toml
crates/aberp-db/src/: lib.rs
crates/aberp-db/tests/: handle_concurrency_e2e.rs
crates/aberp-quote-intake/: Cargo.toml
crates/aberp-quote-intake/src/: audit.rs  error.rs  lib.rs  log_table.rs  mapping.rs  service.rs  transport.rs
crates/aberp-quote-intake/tests/: mock_server_round_trip.rs
crates/aberp-quote-pdf/: Cargo.toml
crates/aberp-quote-pdf/src/: lib.rs
crates/aberp-secret-store/: Cargo.toml
crates/aberp-secret-store/src/: lib.rs
crates/aberp-work-orders/: Cargo.toml
crates/aberp-work-orders/migrations/: V001__work_orders.sql  V002__calibration_link.sql
crates/aberp-work-orders/src/: audit.rs  error.rs  lib.rs  repository.rs  state.rs  types.rs
crates/aberp-work-orders/tests/: wo_auto_complete.rs  work_order_round_trip.rs
crates/audit-ledger/: Cargo.toml
crates/audit-ledger/src/: canonical.rs  error.rs  lib.rs  mirror.rs  serve_tripwire.rs
crates/audit-ledger/src/chain/: verify.rs
crates/audit-ledger/src/entry/: actor.rs  event_kind.rs  ids.rs  mod.rs
crates/audit-ledger/src/session/: anchors.rs  crypto.rs  mod.rs  tsa.rs
crates/audit-ledger/src/storage/: mod.rs  schema.rs
crates/audit-ledger/tests/: chain_conformance.rs  session_lifecycle.rs
crates/nav-transport/: Cargo.toml
crates/nav-transport/roots/: .gitignore
crates/nav-transport/src/: cipher.rs  client.rs  endpoint.rs  error.rs  lib.rs  signatures.rs  trust.rs
crates/nav-transport/src/credentials/: keychain.rs  mod.rs
crates/nav-transport/src/operations/: manage_annulment.rs  manage_invoice.rs  mod.rs  query_invoice_data.rs  query_invoice_digest.rs  query_transaction_status.rs  token_exchange.rs
crates/nav-transport/src/soap/: mod.rs  parts.rs
crates/nav-transport/tests/: query_transaction_status_live.rs  soap_golden.rs  tls_handshake.rs  trust_negation.rs
crates/nav-xsd-validator/: Cargo.toml
crates/nav-xsd-validator/src/: error.rs  lib.rs  validate.rs
modules/billing/: Cargo.toml
modules/billing/src/: api.rs  lib.rs
modules/billing/src/adapters/: duckdb_store.rs  in_memory_store.rs
modules/billing/src/app/: error.rs  issue_invoice.rs
modules/billing/src/domain/: invoice.rs  mod.rs  money.rs  unit_of_measure.rs  vat_rate_kind.rs
modules/billing/src/ports/: storage.rs
modules/billing/tests/: annual_reset.rs  idempotency_key_round_trip.rs  notes_migration.rs  s392_sequence_floor.rs  s394_start_value_floor.rs  sequence_allocator.rs
(+328 files in other folders)
