[package]
name = "aberp-compliance"
description = "S345 / PR-39 — home crate for every defense-grade compliance subsystem (ADR-0071). FOUNDATION ONLY: types + traits + mock backends for export-control screening, CUI marking, lot/heat material traceability, the approved-vendor list (AVL/DPAS), and NIST SP 800-171 control identifiers. No real backends; per the defense-aerospace pivot, real providers (denied-party screeners, mill-cert capture, …) slot in behind these traits in later sessions. S346+ fill the modules and wire the audit EventKinds."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[lib]
name = "aberp_compliance"
path = "src/lib.rs"

[dependencies]
# `serde` derive only — the classification / marking / traceability types
# are serialized into audit payloads downstream (S346). No `serde_json`
# runtime dep: this crate defines and validates types, it never parses.
serde = { workspace = true }

# Typed provider/validation errors — mirrors the workspace library-crate
# posture (`thiserror` everywhere except the binary boundary).
thiserror = { workspace = true }

# The mock providers emit a WARN on construction so they can never silently
# back a production compliance decision (same guard as the S344 mock).
tracing = { workspace = true }

[dev-dependencies]
# `s345_*_logs_warning_on_construction` captures the WARN line via a `fmt`
# subscriber writing into an in-memory buffer — same harness as S344.
tracing-subscriber = { workspace = true }

# Test-only: serde roundtrip assertions (`s345_*_roundtrip`) serialize the
# classification / marking / traceability types to JSON and back. Kept OUT
# of `[dependencies]` on purpose — at runtime this crate is parse-free; only
# the tests need a concrete format.
serde_json = { workspace = true }

# PR-235 / S241 — inherit workspace lint config.
[lints]
workspace = true
