[package]
name = "aberp-db"
description = "ADR-0099 H3 (PROD-HARDEN-2027) — one process-wide shared DuckDB Handle: a single serialized writer over the live tenant DB with a post-commit lockstep mirror append. Eliminates the concurrent separate-instance opens that are the runtime audit-ledger fork primitive. Backported from the production-proven editions consolidation (ABERP-Editions 1e6097d, ADR-0098/0099). The DEBOUNCED durable checkpoint is present but DISABLED in H3 (checkpoint_enabled=false); the runtime validated checkpoint lands in the successor step H4."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

# Library crate. The Handle owns a real `duckdb::Connection` (direct dep) and
# reuses the lockstep `sync_mirror` + `LedgerMeta` from `aberp-audit-ledger` —
# NO new durability primitive is invented here (ADR-0099 H3). Typed errors via
# `thiserror` per ADR-0021 Part A (no `anyhow` in libs); the `apps/aberp`
# daemons wrap Handle results with their own `anyhow` `.context(...)`.
#
# H3/H4 seam: the DEBOUNCED durable checkpoint (D2) is coded and unit-tested
# (the pure `debounce` module) but the runtime FOLD — `aberp_snapshot::
# live_durable_checkpoint` — is DISABLED in H3 (`checkpoint_enabled=false`) and
# lands in H4. So `aberp-snapshot` is intentionally NOT a dependency yet; H4
# re-introduces it when it wires the real checkpoint into
# `Handle::run_durable_checkpoint_locked`.
#
# NOTE (build gate): `duckdb` pulls the bundled libduckdb 1.5.3 amalgamation.
# The pure `debounce` module has ZERO external deps and unit-tests anywhere; the
# duckdb-backed `Handle` + its `tests/handle_concurrency_e2e.rs` are CI/Mac-gated.
[dependencies]
aberp-audit-ledger = { path = "../audit-ledger" }
duckdb = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# Integration tests get their extern crates from dev-dependencies; the same
# path dep -> no Cargo.lock change. `test-support` exposes `Actor::test_only`
# (unused here but matches the editions convention and is harmless).
aberp-audit-ledger = { path = "../audit-ledger", features = ["test-support"] }
duckdb = { workspace = true }

[lints]
workspace = true
