[package]
name = "aberp-quote-intake"
description = "Pulls approved quotes from a sister storefront (ABERP-site) and stages them as pending intake rows for the operator to pick up (S210 / PR-204, Stage 2 entry point per ADR-0056 / [[aberp-versioning-policy]])."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[lib]
name = "aberp_quote_intake"
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
# PR-209 / S213 — `CancellationToken` plumbed into `run_daemon_forever`
# so the quote-intake poll loop exits within the shutdown timeout
# instead of letting tokio drop the task mid-await.
tokio-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zeroize = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
aberp-audit-ledger = { path = "../audit-ledger" }
aberp-billing = { path = "../../modules/billing" }
# ADR-0099 H3 STEP 4d — the daemon routes all quote_intake_log writes/reads
# through the shared process-wide DuckDB Handle (the whole-subsystem-daemon rule),
# so quote_intake_log stays a single-instance family alongside the DEAL/pickup
# sagas that also write it. A fresh `Connection::open` here would tear the WAL.
aberp-db = { path = "../aberp-db" }
duckdb = { workspace = true }
time = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
zeroize = { workspace = true }
# S275 / PR-264 / F2 — `flip_and_audit_in_tx` tests need
# `Actor::test_only` which the ledger gates behind `test-support`.
aberp-audit-ledger = { path = "../audit-ledger", features = ["test-support"] }

# PR-235 / S241 — inherit workspace lint config.
[lints]
workspace = true
