[package]
name = "aberp-audit-ledger"
description = "Tamper-evident hash-chained append-only audit ledger (ADR-0008)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[features]
# Exposes `Actor::test_only` to consumers' integration tests
# (apps/aberp/tests/rollback_conformance.rs). Production code paths in
# apps/aberp do NOT enable this feature, so `Actor::test_only` is
# unreachable from a release binary. Closes fortnightly review F15.
test-support = []

# Dependencies per ADR-0021 Part A. Library crate uses `thiserror` for its
# typed error enum per Part A item 2; no `anyhow` here (anyhow is binary-only).
[dependencies]
ciborium = { workspace = true }
duckdb = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
# Conformance test only. Kept minimal: no extra crates required.
