[package]
name = "aberp-audit-ledger"
description = "Tamper-evident hash-chained append-only audit ledger (ADR-0008)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[features]
# Exposes `Actor::test_only` to consumers' integration tests
# (apps/aberp/tests/rollback_conformance.rs). Production code paths in
# apps/aberp do NOT enable this feature, so `Actor::test_only` is
# unreachable from a release binary. Closes fortnightly review F15.
test-support = []

# Dependencies per ADR-0021 Part A. Library crate uses `thiserror` for its
# typed error enum per Part A item 2; no `anyhow` here (anyhow is binary-only).
[dependencies]
ciborium = { workspace = true }
duckdb = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }

# S441 / ADR-0087 + ADR-0088 — timestamp-anchored audit chain. Ed25519
# session signatures (`ed25519-dalek`), the OS-CSPRNG seed for fresh
# in-memory session keys (`getrandom`), and HMAC-SHA256 for the
# deterministic MockTimestampAuthority (`hmac`, paired with `sha2`).
ed25519-dalek = { workspace = true }
getrandom = { workspace = true }
hmac = { workspace = true }
zeroize = { workspace = true }

# PR-17 (ADR-0030) — audit-ledger mirror file. `base64` encodes payload
# bytes inside the JSON-Lines mirror lines (same shape `bundle/chain.jsonl`
# uses; ADR-0030 §1). `hex` encodes the 32-byte hashes (entry_hash,
# prev_hash, binary_hash). `fs2` provides the exclusive advisory lock on
# the mirror file during `sync_mirror` (ADR-0030 §6). All three crates are
# MIT/Apache-2.0 dual-licensed.
base64 = { workspace = true }
hex = { workspace = true }
fs2 = { workspace = true }

[dev-dependencies]
# Conformance test only. Kept minimal: no extra crates required.

# PR-235 / S241 — inherit workspace lint config.
[lints]
workspace = true
